        - For Perl 5, .pmc and .plx (AZAWAWI, SZABGAB)
        - For Perl 6, .pl6, .pm6, .p6l and .p6m (AZAWAWI)
    - Help search handles now http:// and perldoc:// links (AZAWAWI)
    - Enabled "Syntax Check" tab is now shown when there is a problem without
      losing editor focus (AZAWAWI)
    - Bundled latest perlopref.pod to gain more Perl operator documentation
      (AZAWAWI)

0.45 2009.09.02
    - Disabled 'Test Plugin From Local Dir' menu option until it's properly fixed (GARU)
    - Fixed PluginManager Pod glitch for deprecated Perl5 plugin (ADAMK)
    - Fixed various open bugs which exist on Gnome but not on Windows (SEWI)
    - Several translation updates (thanks to all translators!)

0.44 2009.08.24
    - Help Search now supports perlopref.pod parsing - Perl operator reference 
      (AZAWAWI)
    - Fixed various "Help Search" dialog bugs for perlvars and CORE modules 
      (AZAWAWI)
    - "Directory Browser" stability fixes (AZAWAWI)
    - Refactored "Help Search" to use document help providers. This will make it
      faster (AZAWAWI)
    - Help Search looks up words selected or under the cursor (AZAWAWI)
    - allow the use of $main->open_file_dialog($dir) (SZABGAB)
    - Moved Ecliptic's Quick Fix to Padre core under the Edit menu (AZAWAWI)
    - Enable the F12 Save as shortcut again (SZBAGAB)
    - Added Perl 5 Quick Fix for 'use strict; use warnings;' (AZAWAWI)
    - Added Insert submenu and dialog, moved snippets into insert submenu (TEEJAY)

0.43 2009.08.16
    - Revised nice splash screen slightly. Move original artwork
      to Padre-Artwork (BRAMBLE)
    - Added a (hopefully) nice splash screen for Padre (GARU)
    - Added a Padre::Perl API for discovering the location of the system
      Perl in a way smart enough to handle people that specifically need a
      command line Perl, or specifically need a windowing Perl (ADAMK)
    - Temporarily remove PAR support (ADAMK)
    - Upgrade the plugin internals to support arbitrary class names,